--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
+@import url("https://fonts.googleapis.com/css2?family=Unbounded:wght@900&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #000011 !important;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+h1 {
+  font-family: "Unbounded", cursive;
+  letter-spacing: 0.5em;
+  color: #39ff14;
+}
+
+p {
+  color: #ffffff;
+}
+
+.right-panel {
+  text-align: center;
+  margin-top: 100px;
+  width: 100%;
+}
+
+.child {
+  width: 50%;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.panel {
+  padding: 0 100px;
 }
