--- a/src/index.css
+++ b/src/index.css
@@ -103,3 +103,12 @@ input:focus {
 .instructions {
   font-family: "Unbounded", cursive;
 }
+
+@media all and (max-width:800px) {
+    .child
+    {
+        display: block; 
+        float: none; 
+        width: 100%;
+    }
+}
