--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Unbounded:wght@900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@900');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 body {
   margin: 0;
@@ -28,6 +29,7 @@ h6 {
 
 p {
   color: #ffffff;
+  font-family: 'Lato', sans-serif;
 }
 
 input {
