--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,7 @@ input:focus {
 
 .instructions {
   font-family: "Unbounded", cursive;
+  font-size: 1em;
 }
 
 @media only screen and (max-width: 1000px)
